--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,29 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+header {
+    position: fixed;
+    width: 100%;
+    height: 7%;
+    left: 0;
+    top: 0;
+    background-color: rgb(3, 74, 174);
+    color: white;
+    text-align: center;
+}
+
+footer {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    height: 7%;
+    background-color: rgb(3, 74, 174);
+    color: white;
+    text-align: center;
+}
+
+.main-container {
+    background-image :url("back_2.jpg");
+    background-size: cover;
+    height: 1200px;
+    width: 200%;
+    color: rgb(84, 86, 83);
+}
