--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SessionLogin</title>
+    <title>Acehook</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,18 +11,31 @@
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
+    <div class="main-container">
+      <header>
+        <p>Acehook</p>
+      </header>
 
-     <% if logged_in? %>
-      <%= link_to "プロフィール", user_path(current_user.id) %>
-      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
-    <% else %>
-      <%= link_to "新規に登録する", new_user_path %>
-      <%= link_to "ログインする", new_session_path %>
-    <% end %>
+    <br></br>
 
-    <%= yield %>
+      <% if logged_in? %>
+        <%= link_to "プロフィール", user_path(current_user.id) %>
+        <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+      <% else %>
+        <%= link_to "新規に登録する", new_user_path %>
+        <%= link_to "ログインする", new_session_path %>
+      <% end %>
+
+
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div, value, class: "#{key}") %>
+      <% end %>
+
+      <%= yield %>
+
+      <footer>
+        <p>Copyright &copy; 2022 DIC.</p>
+      </footer>
+    </div>
   </body>
 </html>
