--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(model: feed) do |form| %>
-  <% if feed.errors.any? %>
+<%= form_with(model: @feed, local: true, url: choose_new_or_edit) do |form| %>
+  <% if @feed.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(feed.errors.count, "error") %> prohibited this feed from being saved:</h2>
+      <h2><%= @feed.errors.count %>件のエラーがあります。</h2>
 
       <ul>
-        <% feed.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% @feed.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
@@ -29,3 +29,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+<%= link_to "投稿一覧画面にもどる", feeds_path %>
