--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -1,11 +1,15 @@
-<h1>確認画面</h1>
-<%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
-  <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
-  <%= form.hidden_field :image_cache %>
-  <%= form.submit "投稿する" %>
-<% end %>
+<h1>以下の内容で投稿する</h1>
 
-<%= form_with(model:@feed, url:new_feed_path, local:true, method:"get") do |form| %>
+<%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
   <%= form.hidden_field :image_cache %>
+  <%= form.hidden_field :title %>
+  <%= form.hidden_field :content %>
+
+  <p>画像:<%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %></p>
+  <p>タイトル:<%= @feed.title %></p>
+  <p>本文:<%= @feed.content %></p>
+  <%= form.submit "投稿する" %>
+
   <%= form.submit "戻る", name: "back" %>
+
 <% end %>
