メーラー実装中エラー確認

--- a/app/views/feeds/edit.html.erb
+++ b/app/views/feeds/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', feed: @feed %>
 
-<%= link_to '確認画面へ', @feed %> |
+<%= link_to '詳細画面へ', @feed %> |
 <%= link_to '投稿一覧画面へ戻る', feeds_path %>
