--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Acehook</title>
+    <title>Cheapgram</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <p>Acehook</p>
+      <p>Cheapgram</p>
     </header>
 
     <br></br>
@@ -34,7 +34,7 @@
     </div>
     
     <footer>
-      <p>Copyright &copy; 2022 DIC.</p>
+      <p>Copyright &copy; 2023 DIC.</p>
     </footer>
   </body>
 </html>
