--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @user.name %>のページ</h1>
 
+<p>プロフィール画像: <%= image_tag(@user.image.url) if @user.image && @user.image.url %></p>
+<p>名前: <%= @user.name %></p>
 <p>メールアドレス: <%= @user.email %></p>
 
 <%= link_to '新規に投稿する', new_feed_path %>
