--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @feed, local: true, url: choose_new_or_edit) do |form| %>
+<%= form_with(model: @feed, local: true, url: choose_new_or_edit_for_feed) do |form| %>
   <% if @feed.errors.any? %>
     <div id="error_explanation">
       <h2><%= @feed.errors.count %>件のエラーがあります。</h2>
